PMD:UselessParentheses